Fix net rpc share allowedusers to work with 2008r2

The RAP NetShareEnum command was removed in 2008r2, so use the RPC equivalent
instead.

Bug: https://bugzilla.samba.org/show_bug.cgi?id=8966
Author: Jeremy Allison <jra@samba.org>
(cherry picked from commit 0efdbc565fe64ab87bda4c9632a701e3115d7b23)